# Consultation-System

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/engines/: advice_engine.py  confidence_engine.py  fusion_engine.py  questionnaire_scorer.py  risk_engine.py  tongue_feature_extractor.py
backend/app/models/: __init__.py  constitution_result.py  consultation_session.py  patient.py  questionnaire_answer.py  result_report.py  tongue_capture.py  tongue_feature.py
backend/app/repositories/: capture_repo.py  questionnaire_repo.py  result_repo.py  session_repo.py
backend/app/schemas/: admin.py  analysis.py  capture.py  questionnaire.py  session.py
backend/app/services/: admin_service.py  analysis_service.py  capture_service.py  questionnaire_service.py  report_service.py  session_service.py
backend/app/utils/: image_quality.py  image_storage.py
backend/tests/: conftest.py
backend/tests/api/: test_admin_routes.py  test_analysis_routes.py  test_capture_routes.py  test_end_to_end_smoke.py  test_health.py  test_questionnaire_routes.py  test_questionnaire_template_routes.py  test_session_routes.py
backend/tests/engines/: test_questionnaire_scorer.py  test_tongue_feature_extractor.py
config/: advice_templates.yaml  confidence_rules.yaml  question_scoring.yaml  questionnaire.yaml  risk_rules.yaml  tongue_rules.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: dev.ps1  seed_demo_data.py
(+64 files in other folders)
